# RemoteUnixTerminal

./: .directory  README.md
Client/: .directory  CMakeLists.txt  settings
Client/data/: settings
Client/decor/: LogoClientConsole
Client/header/: MainConsole.h  MainWindow.h  SettingsWindow.h
Client/resources/: Resources.h  Resources.rc
Client/source/: MainConsole.c  MainWindow.c  SettingsWindow.c
Server/: .directory  .gitignore  Build.py  CMakeLists.txt
Server/data/: server_output
Server/header/: KernelServer.h  ServerTime.h
Server/log/: 16-57-55_20.03.2020.txt
Server/sharedlib/CustomCd/: .directory  CMakeLists.txt  servercd.c  servercd.h
Server/source/: KernelServer.c  ServerTime.c
